<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.kusoroadeolu</groupId>
    <artifactId>clique</artifactId>
    <version>3.2.1</version>
    <packaging>pom</packaging>

    <name>Clique</name>
    <description>A CLI library for beautifying Java terminal applications</description>
    <url>https://github.com/kusoroadeolu/Clique</url>
    <licenses>
        <license>
            <name>Apache 2.0 License</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>kusoroadeolu</id>
            <name>Kusoro Adeolu</name>
            <email>kusorodeolu@gmail.com</email>
        </developer>
    </developers>
    <modules>
        <module>clique-core</module>
        <module>clique-spi</module>
        <module>clique-themes</module>
    </modules>

    <scm>
        <connection>scm:git:git://github.com/kusoroadeolu/Clique.git</connection>
        <developerConnection>scm:git:ssh://github.com:kusoroadeolu/Clique.git</developerConnection>
        <url>https://github.com/kusoroadeolu/Clique</url>
    </scm>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <clique-core.version>3.2.1</clique-core.version>
        <clique-spi.version>1.0.6</clique-spi.version>
        <junit.version>5.11.4</junit.version>
        <clique-themes.version>1.0.0</clique-themes.version>
    </properties>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.kusoroadeolu</groupId>
                <artifactId>clique-core</artifactId>
                <version>${clique-core.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.kusoroadeolu</groupId>
                <artifactId>clique-spi</artifactId>
                <version>${clique-spi.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.kusoroadeolu</groupId>
                <artifactId>clique-themes</artifactId>
                <version>${clique-themes.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.0</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.6.0</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <doclint>none</doclint>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>3.1.0</version>
                    <executions>
                        <execution>
                            <id>sign-artifacts</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>sign</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.sonatype.central</groupId>
                    <artifactId>central-publishing-maven-plugin</artifactId>
                    <version>0.9.0</version>
                    <extensions>true</extensions>
                    <configuration>
                        <publishingServerId>central</publishingServerId>
                        <autoPublish>true</autoPublish>
                    </configuration>
                </plugin>
            </plugins>
    </build>

</project>